acstgwm-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acstgwm
  labels:
    name: acstgwm
