acstgwm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acstgwm-deployment
  namespace: acstgwm
  labels:
    app: acstgwm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: acstgwm
  template:
    metadata:
      labels:
        app: acstgwm
    spec:
      containers:
      - name: acstgwm
        image: marwenhm/backendimage:latest
        ports:
        - containerPort: 8089
        volumeMounts:
        - name: service-account-volume
          mountPath: "/app/src/main/resources/service-account.json"
          subPath: service-account.json
      volumes:
      - name: service-account-volume
        secret:
          secretName: acstgwm-secret
          items:
          - key: GOOGLE_SERVICE_ACCOUNT_KEY_PATH
            path: service-account.json
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
