backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: argocd
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: marwenhm/backendimage:latest
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: service-account
              mountPath: /config
              readOnly: true
          command:
            - java
            - -Dgoogle.service.account.key.location=file:/config/service-account.json
            - -jar
            - /ACST-0.0.1.jar
      volumes:
        - name: service-account
          secret:
            secretName: google-service-account
