acstgwm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acstgwm-service
  namespace: acstgwm
spec:
  selector:
    app: acstgwm
  ports:
  - protocol: TCP
    port: 8089
    targetPort: 8089
  type: ClusterIP
