acstgwm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acstgwm-ingress
  namespace: acstgwm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Optional, for HTTPS
spec:
  tls:
  - hosts:
    - gam.support.com
    secretName: acstgwm-tls
  rules:
  - host: gam.support.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acstgwm-service
            port:
              number: 8089
